<resources>
    <string name="app_name">AgriSolution</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="community">Community</string>
    <string name="experts">Experts</string>
    <string name="explore">Explore</string>
    <string name="calender">Calender</string>
    <string name="update">Update Profile</string>
    <string name="market">Market</string>
    <string name="about">About</string>
    <string name="contact">Contact Us</string>
    <string name="exit">Exit</string>
    <string name="setting">Setting</string>
    <string name="back">Back</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="do_not_have_account_create_account">Do not Have Account? Create Account</string>
    <string name="forget_password">Forget PAssword!</string>
    <string name="password">Password</string>
    <string name="con_pass">Conform Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="city">City/Town</string>
    <string name="province_state">Province/State</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="occupation">Occupation</string>
    <string name="f_name">Name:</string>
    <string name="_user">Username:</string>
    <string name="email_">Email:</string>
    <string name="_mobile">Mobile No:</string>
    <string name="ocup_">Occupation:</string>
    <string name="city_">City/Town:</string>
    <string name="_province">Province/Sate:</string>
</resources>
