<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/images"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="7dp"

    >
    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:src="@drawable/agrisol"
        android:scaleType="fitXY"
        android:layout_weight="1"
        />
</LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="700dp"
        app:cardBackgroundColor="@color/Light_Jade"
        app:cardCornerRadius="40dp"
        >

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:layout_marginTop="10dp"
       android:layout_gravity="top|center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:gravity="center"

        >
        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"

            >
            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/home"
                android:layout_gravity="center"
                />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom|center"
                 android:text="@string/home"
                 android:textSize="14dp"
                 android:textStyle="bold"
                 />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"

            >
            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/comunity"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:text="@string/community"
                android:textSize="14dp"
                android:textStyle="bold"
                />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:onClick="Profile_Card"
            tools:ignore="OnClick">
            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/profile"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:text="@string/profile"
                android:textSize="14dp"
                android:textStyle="bold"
                />
        </androidx.cardview.widget.CardView>
    </LinearLayout>


       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:layout_alignParentTop="true"
           android:layout_margin="5dp"
           android:gravity="center"

           >
           <androidx.cardview.widget.CardView
               android:layout_width="100dp"
               android:layout_height="100dp"
               android:layout_gravity="center"
               android:layout_margin="5dp"

               >
               <ImageView
                   android:layout_width="70dp"
                   android:layout_height="70dp"
                   android:src="@drawable/experts"
                   android:layout_gravity="center"
                   />
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="bottom|center"
                   android:text="@string/experts"
                   android:textSize="14dp"
                   android:textStyle="bold"
                   />
           </androidx.cardview.widget.CardView>

           <androidx.cardview.widget.CardView
               android:layout_width="100dp"
               android:layout_height="100dp"
               android:layout_gravity="center"
               android:layout_margin="5dp"

               >
               <ImageView
                   android:layout_width="70dp"
                   android:layout_height="70dp"
                   android:src="@drawable/explore"
                   android:layout_gravity="center"
                   />
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="bottom|center"
                   android:text="@string/explore"
                   android:textSize="14dp"
                   android:textStyle="bold"
                   />
           </androidx.cardview.widget.CardView>

           <androidx.cardview.widget.CardView
               android:layout_width="100dp"
               android:layout_height="100dp"
               android:layout_gravity="center"
               android:layout_margin="5dp"
               >
               <ImageView
                   android:layout_width="70dp"
                   android:layout_height="70dp"
                   android:src="@drawable/update"
                   android:layout_gravity="center"
                   />
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="bottom|center"
                   android:text="@string/update"
                   android:textSize="14dp"
                   android:textStyle="bold"
                   />
           </androidx.cardview.widget.CardView>
       </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:layout_alignParentTop="true"
           android:layout_margin="5dp"
           android:gravity="center"

           >
           <androidx.cardview.widget.CardView
               android:layout_width="100dp"
               android:layout_height="100dp"
               android:layout_gravity="center"
               android:layout_margin="5dp"

               >
               <ImageView
                   android:layout_width="70dp"
                   android:layout_height="70dp"
                   android:src="@drawable/calender"
                   android:layout_gravity="center"
                   />
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="bottom|center"
                   android:text="@string/calender"
                   android:textSize="14dp"
                   android:textStyle="bold"
                   />
           </androidx.cardview.widget.CardView>

           <androidx.cardview.widget.CardView
               android:layout_width="100dp"
               android:layout_height="100dp"
               android:layout_gravity="center"
               android:layout_margin="5dp"

               >
               <ImageView
                   android:layout_width="70dp"
                   android:layout_height="70dp"
                   android:src="@drawable/market"
                   android:layout_gravity="center"
                   />
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="bottom|center"
                   android:text="@string/market"
                   android:textSize="14dp"
                   android:textStyle="bold"
                   />
           </androidx.cardview.widget.CardView>

           <androidx.cardview.widget.CardView
               android:layout_width="100dp"
               android:layout_height="100dp"
               android:layout_gravity="center"
               android:layout_margin="5dp"
               >
               <ImageView
                   android:layout_width="70dp"
                   android:layout_height="70dp"
                   android:src="@drawable/about"
                   android:layout_gravity="center"
                   />
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="bottom|center"
                   android:text="@string/about"
                   android:textSize="14dp"
                   android:textStyle="bold"
                   />
           </androidx.cardview.widget.CardView>
       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:layout_alignParentTop="true"
           android:layout_margin="5dp"
           android:gravity="center"

           >
           <androidx.cardview.widget.CardView
               android:layout_width="100dp"
               android:layout_height="100dp"
               android:layout_gravity="center"
               android:layout_margin="5dp"

               >
               <ImageView
                   android:layout_width="70dp"
                   android:layout_height="70dp"
                   android:src="@drawable/contactus"
                   android:layout_gravity="center"
                   />
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="bottom|center"
                   android:text="@string/contact"
                   android:textSize="14dp"
                   android:textStyle="bold"
                   />
           </androidx.cardview.widget.CardView>

           <androidx.cardview.widget.CardView
               android:layout_width="100dp"
               android:layout_height="100dp"
               android:layout_gravity="center"
               android:layout_margin="5dp"

               >
               <ImageView
                   android:layout_width="70dp"
                   android:layout_height="70dp"
                   android:src="@drawable/setting"
                   android:layout_gravity="center"
                   />
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="bottom|center"
                   android:text="@string/setting"
                   android:textSize="14dp"
                   android:textStyle="bold"
                   />
           </androidx.cardview.widget.CardView>

           <androidx.cardview.widget.CardView
               android:layout_width="100dp"
               android:layout_height="100dp"
               android:layout_gravity="center"
               android:layout_margin="5dp"
               >
               <ImageView
                   android:layout_width="70dp"
                   android:layout_height="70dp"
                   android:src="@drawable/exit"
                   android:layout_gravity="center"
                   />
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="bottom|center"
                   android:text="@string/exit"
                   android:textSize="14dp"
                   android:textStyle="bold"
                   />
           </androidx.cardview.widget.CardView>
       </LinearLayout>

   </LinearLayout>



    </androidx.cardview.widget.CardView>
</LinearLayout>