<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@drawable/green_login"
    tools:context=".UpdateProfileActivity">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Update Profile"
        android:layout_gravity="top|center"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:textFontWeight="1"
        android:textSize="25dp"
        android:textColor="@color/White"
        />
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="1000dp"
        app:cardCornerRadius="30dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="180dp"
                android:layout_marginTop="10dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:src="@drawable/profile"
                app:civ_border_color="@color/colorPrimaryDark"
                app:civ_border_width="2dp"
                android:layout_marginBottom="20dp"
                >

            </de.hdodenhof.circleimageview.CircleImageView>


            <com.google.android.material.textfield.TextInputLayout
                app:boxStrokeColor="@color/Green_Apple"

                app:hintAnimationEnabled="true"
                app:errorEnabled="true"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"

                android:hint="@string/full_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="300dp"
                    android:inputType="textPersonName"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                app:errorEnabled="true"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="Username"

                android:layout_weight="1"
                android:layout_gravity="center"

                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/Green_Apple"
                android:outlineProvider="paddedBounds"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                app:errorEnabled="true"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"

                android:layout_weight="1"
                android:layout_gravity="center"

                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/Green_Apple"
                android:outlineProvider="paddedBounds"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                app:errorEnabled="true"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/mobile_number"

                android:layout_weight="1"
                android:layout_gravity="center"

                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/Green_Apple"
                android:outlineProvider="paddedBounds"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPhonetic"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                app:errorEnabled="true"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/occupation"

                android:layout_weight="1"
                android:layout_gravity="center"

                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/Green_Apple"
                android:outlineProvider="paddedBounds"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                app:errorEnabled="true"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/city"

                android:layout_weight="1"
                android:layout_gravity="center"

                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/Green_Apple"
                android:outlineProvider="paddedBounds"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                app:errorEnabled="true"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/province_state"

                android:layout_weight="1"
                android:layout_gravity="center"

                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/Green_Apple"
                android:outlineProvider="paddedBounds"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    />

            </com.google.android.material.textfield.TextInputLayout>





            <androidx.cardview.widget.CardView
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                app:cardCornerRadius="20dp"
                app:cardBackgroundColor="@color/Green_Apple"

                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/White"
                    android:text="UPDATE"
                    android:layout_gravity="center"
                    android:textSize="20sp"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</ScrollView>
</LinearLayout>